# meilisearch

./: AGENT.md
crates/meilisearch/src/: lib.rs
crates/meilisearch/src/documents_retrieval/: mod.rs
crates/meilisearch/src/routes/: multi_search.rs
crates/milli/src/: index.rs
crates/milli/src/update/: settings.rs
crates/milli/src/update/new/extract/searchable/: extract_word_docids.rs  extract_word_pair_proximity_docids.rs
crates/milli/src/update/upgrade/: v1_37.rs  v1_45.rs
crates/milli/src/vector/: store.rs
memory/: JOURNAL.md
spectral-intelligence/: Cargo.toml  README.md
spectral-intelligence/src/: main.rs  spectral.rs
