[package]
name = "spectral-intelligence"
version = "0.1.0"
edition = "2021"
description = "Spectral graph theory analysis for Meilisearch HNSW vector indexes"
license = "MIT"

[[bin]]
name = "spectral-intelligence"
path = "src/main.rs"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.10"
bincode = "1"
memmap2 = "0.9"
byteorder = "1"
rand = "0.8"

[workspace]

[dev-dependencies]
approx = "0.5"
tempfile = "3"
